feat: implement company select

--- a/client/src/app/components/new-stock/new-stock.component.html
+++ b/client/src/app/components/new-stock/new-stock.component.html
@@ -1,3 +1,11 @@
-<p>
-  new-stock works!
-</p>
+<input type="text"
+       class="form-control"
+       [ngbTypeahead]="search"
+       [resultTemplate]="rt"
+       [inputFormatter]="formatter"
+       (selectItem)="onCompanySelect($event)"
+       />
+
+<ng-template #rt let-r="result" let-t="term">
+  {{r.Name}} - {{t}}
+</ng-template>
