feat: clear search after selecting the company

--- a/client/src/app/components/new-stock/new-stock.component.html
+++ b/client/src/app/components/new-stock/new-stock.component.html
@@ -3,6 +3,7 @@
        [ngbTypeahead]="search"
        [resultTemplate]="rt"
        [inputFormatter]="formatter"
+       [(ngModel)]="model"
        (selectItem)="onCompanySelect($event)"
        />
 
