--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,34 @@
-<div class="container pt-5">
+<div class="container container--sm pt-5">
+
+  <h3>Stocks Overview</h3>
+
   <app-new-stock></app-new-stock>
+
+  <table class="table mt-3">
+    <thead>
+      <tr>
+        <th scope="col"> Stock </th>
+        <th scope="col"> Price </th>
+        <th scope="col"> Volume </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th>1</th>
+        <td>Mark</td>
+        <td>Otto</td>
+      </tr>
+      <tr>
+        <th>2</th>
+        <td>Jacob</td>
+        <td>Thornton</td>
+      </tr>
+      <tr>
+        <th>3</th>
+        <td>Larry</td>
+        <td>the Bird</td>
+      </tr>
+    </tbody>
+  </table>
+
 </div>
