--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,7 +2,10 @@
 
   <h3>Stocks Overview</h3>
 
-  <app-new-stock></app-new-stock>
+  <app-new-stock (select)="onStockSelect($event)">
+  </app-new-stock>
+
+  <pre>{{stockService.getStocks | json}}</pre>
 
   <table class="table mt-3">
     <thead>
