feat: fetch stock's daily data

--- a/client/src/app/components/stock-details/stock-details.component.html
+++ b/client/src/app/components/stock-details/stock-details.component.html
@@ -1,4 +1,7 @@
-<chart [type]="'line'"
-       [data]="data"
-       [options]="options">
-</chart>
+<div class="stock-details">
+  <chart class="stock-details__chart"
+         [type]="'line'"
+         [data]="data"
+         [options]="options">
+  </chart>
+</div>
