--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -22,6 +22,6 @@
     </tbody>
   </table>
 
-  <app-stock-details [symbol]="'FA'"></app-stock-details>
+  <app-stock-details [symbol]="'FB'"></app-stock-details>
 
 </div>
