feat: style chart

--- a/client/src/app/components/stock-details/stock-details.component.html
+++ b/client/src/app/components/stock-details/stock-details.component.html
@@ -3,7 +3,8 @@
          *ngIf="data"
          [type]="'line'"
          [data]="data"
-         [options]="options">
+         [options]="options"
+         >
   </chart>
 
   <div class="sk-folding-cube"
