--- a/client/src/theme/_variables.scss
+++ b/client/src/theme/_variables.scss
@@ -2,10 +2,10 @@
 $light: #FAF9F8;
 $dark: #1A1D26;
 $blue: #00B6F0;
-$green: #00CE5C;
+$green: #32BAB8;
 $white: #FFFFFF;
 $gray: #99A1A3;
-$red: #D7335E;
+$red: rgb(255, 99, 132);
 $light-gray: #E5E7E8;
 
 // @media breaks
