--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -3,6 +3,7 @@
 .stock {
   padding: 40px;
   margin-top: 30px;
+  margin-bottom: 30px;
   border-radius: 5px;
   box-shadow: 0 15px 30px rgba($dark, .9);
   background-color: rgba($white, .03);
