--- a/client/src/app/components/stock-details/stock-details.component.scss
+++ b/client/src/app/components/stock-details/stock-details.component.scss
@@ -1,6 +1,11 @@
+:host {
+  display: block;
+}
+
 .stock-details {
   height: 400px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 
