--- a/client/src/app/components/stock-details/stock-details.component.scss
+++ b/client/src/app/components/stock-details/stock-details.component.scss
@@ -9,8 +9,20 @@
   align-items: center;
   justify-content: center;
 
-  &__chart {
-    height: 300px;
+  &__content {
     width: 100%;
+    height: 350px;
+    animation: fadeUp .6s forwards;
+  }
+}
+
+@keyframes fadeUp {
+  0% {
+    opacity: 0;
+    transform: translateY(40px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
   }
 }
