feat: update table styles

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -23,7 +23,7 @@
           </tr>
           <tr>
             <td colspan="3"
-                class="p-0">
+                class="p-0 border-0">
               <div *ngIf="stock === selectedStock"
                    class="stock-table__expanded-row"
                    [@slide]>
