--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -11,7 +11,7 @@
 
 .stock-header {
   font-weight: 200;
-  margin: 80px 0 80px;
+  margin: 40px 0 40px;
 }
 
 .stock-table {
@@ -19,7 +19,7 @@
   font-size: 18px;
 
   td, th {
-    border-color: rgba($white, .1);
+    border-color: #484a51;
 
     &:first-child {
       border-radius: 3px 0 0 3px;
