faet: validate stockquotes volume

--- a/client/src/app/components/new-stock/new-stock.component.html
+++ b/client/src/app/components/new-stock/new-stock.component.html
@@ -1,6 +1,6 @@
 <input type="text"
-       class="form-control"
-       placeholder="Find the company..."
+       class="form-control type-ahead"
+       placeholder="Add new company..."
        [ngbTypeahead]="search"
        [resultTemplate]="rt"
        [inputFormatter]="formatter"
