--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -25,8 +25,12 @@
           <tr (click)="toggleStock(stock)"
               class="stock-table__row">
             <td> {{stock.name}} </td>
-            <td> ${{stock.stockQuotes?.price | number}} </td>
-            <td> {{stock.stockQuotes?.volume | number}} </td>
+            <td>
+              <b>{{stock.stockQuotes?.price | currency: 'USD'}}</b>
+            </td>
+            <td>
+              {{stock.stockQuotes?.volume ? (stock.stockQuotes?.volume | currency: 'USD') : '--'}}
+            </td>
           </tr>
           <tr>
             <td colspan="3"
