--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -68,6 +68,7 @@
     cursor: pointer;
     transition: .3s all;
     opacity: 0;
+    outline: none;
     transform: translateX(5px);
 
     &:hover {
