--- a/client/src/app/components/new-stock/new-stock.component.html
+++ b/client/src/app/components/new-stock/new-stock.component.html
@@ -1,6 +1,7 @@
 <input type="text"
        class="form-control type-ahead"
        placeholder="Add new company..."
+       autofocus
        [ngbTypeahead]="search"
        [resultTemplate]="rt"
        [inputFormatter]="formatter"
