--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -3,12 +3,13 @@
 @import './theme/typeahead';
 @import './theme/variables';
 
-html {
+html, body {
   height: 100%;
+  width: 100%;
 }
 
 body {
-  min-height: 100%;
+  // min-height: 100%;
   color: $white;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 200;
