faet: make stock details responsive

--- a/client/src/app/components/stock-details/stock-details.component.html
+++ b/client/src/app/components/stock-details/stock-details.component.html
@@ -1,4 +1,4 @@
-<div class="stock-details">
+<div class="stock-details px-3 px-sm-0">
   <div *ngIf="data"
        class="stock-details__content">
     <div class="d-flex align-items-center">
