--- a/client/src/app/components/stock-details/stock-details.component.scss
+++ b/client/src/app/components/stock-details/stock-details.component.scss
@@ -1,3 +1,5 @@
+@import '../../../theme/variables';
+
 :host {
   display: block;
 }
@@ -13,6 +15,14 @@
     width: 100%;
     height: 350px;
     animation: fadeUp .6s forwards;
+  }
+
+  @media screen and (max-width: $break-sm) {
+    height: 300px;
+
+    .stock-details__content {
+      height: 250px;
+    }
   }
 }
 
